--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   location: ^4.3.0
   http: ^0.13.3
+  autocomplete_textfield: ^1.7.3
+  weather_icons: ^2.0.2
+  percent_indicator: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,9 +50,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/cloudy.png
+    - assets/images/rainy.png
+    - assets/images/some_clouds.png
+    - assets/images/sunny.png
+    - assets/images/thunderstorm.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
